--- a/evently/src/app/pages/dashboard/whats-on/whats-on/whats-on.component.scss
+++ b/evently/src/app/pages/dashboard/whats-on/whats-on/whats-on.component.scss
@@ -25,27 +25,18 @@
   align-content: flex-start;
 }
 
-.event {
-  margin: 20px;
-  max-width: 300px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-}
-
-.event2 {
-  margin: 20px;
-  // max-width: 300px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-}
+// .event {
+//   margin: 20px;
+//   max-width: 300px;
+//   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+//   transition: 0.3s;
+//   border-radius: 5px;
+// }
 
 .event-container {
   text-align: left;
   border: #6d4199;
-  margin: 1em;
-  // padding: 20px 0px;
+  margin: 0rem 1rem 2rem 1rem;
   background-color: #f4ffff;
   border-radius: 25px;
   box-shadow: 0.3em 0.5em 3em rgba(0, 0, 0, 0.7);
